--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -437,6 +437,11 @@ parameters:
 			path: src/Support/Type.php
 
 		-
+			message: "#^Parameter \\#1 \\$function of function call_user_func_array expects callable\\(\\)\\: mixed, array\\(\\$this\\(Rebing\\\\GraphQL\\\\Support\\\\Type\\), string\\) given\\.$#"
+			count: 1
+			path: src/Support/Type.php
+
+		-
 			message: "#^Method Rebing\\\\GraphQL\\\\Support\\\\Type\\:\\:getFields\\(\\) return type has no value type specified in iterable type array\\.$#"
 			count: 1
 			path: src/Support/Type.php
